Parsing json int into Integer, generyfying downloading data